--- a/docs/_includes/header.html
+++ b/docs/_includes/header.html
@@ -19,8 +19,8 @@
             <ul class="nav navbar-nav menu">
 
                         <li><a href="/szolgaltatasok/">Szolg&#225;ltat&#225;sok</a></li>
-                        <li><a href="/hirek-akciok/">H&#237;rek / akci&#243;k</a></li>
-                        <li><a href="/termekek/">Term&#233;kek</a></li>
+                        <li><a href="/szurkehalyog-mutet">Szürkehályog műtét</a></li>
+                        <li><a href="/arak">Árak</a></li>
                         <li><a href="/uzleteink-elerhetosege/">&#220;zleteink el&#233;rhetős&#233;ge</a></li>
                         <li><a href="/gyik/">GY.I.K.</a></li>
             </ul>
