--- a/docs/_layouts/root.html
+++ b/docs/_layouts/root.html
@@ -18,7 +18,10 @@
         {% include header.html %}
 
         <div class="page">
-            {{ content }}
+            <div class="container">
+
+                {{ content }}
+            </div>
         </div>
     </div>
     {% include footer.html %}
