--- a/docs/_includes/header.html
+++ b/docs/_includes/header.html
@@ -18,11 +18,10 @@
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav menu">
 
-                        <li><a href="/szolgaltatasok/">Szolg&#225;ltat&#225;sok</a></li>
+                        <li><a href="/szolgaltatasok">Szolgáltatások</a></li>
                         <li><a href="/szurkehalyog-mutet">Szürkehályog műtét</a></li>
                         <li><a href="/arak">Árak</a></li>
-                        <li><a href="/uzleteink-elerhetosege/">&#220;zleteink el&#233;rhetős&#233;ge</a></li>
-                        <li><a href="/gyik/">GY.I.K.</a></li>
+                        <li><a href="/uzleteink-elerhetosege/">Üzleteink</a></li>
             </ul>
         </div><!--/.nav-collapse -->
     </div><!--/.container-fluid -->
