--- a/docs/_includes/footer.html
+++ b/docs/_includes/footer.html
@@ -4,23 +4,23 @@
         <div class="container">
             <div class="row">
 
-                <div class="col-md-4">
+                <div class="col-md-8">
                     <section class="content shops">
                         <header>
                             <h3>Üzleteink</h3>
                         </header>
-                        <ul class="list-unstyled">
-                            <li><span class="glyphicon glyphicon-home"></span><span class="address">2890 Tata,
-                                    T&#243;v&#225;rosi korz&#243; 2.</span></li>
-                            <li><span class="glyphicon glyphicon-home"></span><span class="address">2890 Tata, Ady E.
-                                    &#250;t 15.</span></li>
-                            <li><span class="glyphicon glyphicon-home"></span><span class="address">2800 Tatab&#225;nya,
-                                    D&#243;zsa Gy &#250;t 58.</span></li>
-                            <li><span class="glyphicon glyphicon-home"></span><span class="address">2800 Tatab&#225;nya,
-                                    Magyary Z. u. 2. (r&#233;gi S&#225;gv&#225;ri E. &#250;t 46.)</span></li>
-                        </ul>
-                        <p>
-                            Tekintse meg üzletink elérhetőségét térképen is <a href="/uzleteink-elerhetosege/">itt</a>.
+                        <div class="row">
+                            {% for shop in site.data.shops %}
+                            <div class="col-sm-6">
+                                <div class="item">
+                                    <span class="glyphicon glyphicon-home"></span><span
+                                        class="address">{{shop.address}}</span>
+                                </div>
+                            </div>
+                            {% endfor %}
+                        </div>
+                        <p class="details">
+                            Tekintse meg a nyitvatartást, valamint üzletink elérhetőségét térképen is <a href="/uzleteink-elerhetosege/">itt</a>.
                         </p>
                     </section>
                 </div>
@@ -33,19 +33,21 @@
                         </header>
 
                         <p>
-                            <i class="fa fa-envelope"></i> E-mail: <a
+                             <span>E-mail:</span> <a
                                 href="mailto:info@aranyszemoptika.hu">info@aranyszemoptika.hu</a>
                         </p>
-                        <p>
-                            Facebook oldalunk: <a href="https://www.facebook.com/aranyszem.optika" target="_blank"><i
-                                    class="fa fa-facebook-official fa-2x facebook"></i></a>
+                        <p class="facebook">
+                            <a href="https://www.facebook.com/aranyszem.optika" target="_blank"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#aaa" class="bi bi-facebook" viewBox="0 0 16 16">
+                                <path d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951z"/>
+                              </svg>
+                            <span>Facebook oldalunk</span></a>
                         </p>
                     </section>
                 </div>
 
 
 
-                <div class="col-md-4">
+                <!-- <div class="col-md-4">
                     <section class="content article">
                         <header>
                             <h3>Legutóbbi cikkünk</h3>
@@ -60,7 +62,7 @@
                         </p>
                         <p class="go"><a href="/hirek-akciok/oktober/">Tovább...</a></p>
                     </section>
-                </div>
+                </div> -->
             </div>
         </div>
     </div>
