--- a/docs/_layouts/root.html
+++ b/docs/_layouts/root.html
@@ -9,7 +9,7 @@
     {% include _favicon.html %}
     {% include _styles.html %}
 
-    <title>Document</title>
+    {% include _seo.html %}
 
 </head>
 
