--- a/docs/_includes/header.html
+++ b/docs/_includes/header.html
@@ -21,7 +21,7 @@
                         <li><a href="/szolgaltatasok">Szolgáltatások</a></li>
                         <li><a href="/szurkehalyog-mutet">Szürkehályog műtét</a></li>
                         <li><a href="/arak">Árak</a></li>
-                        <li><a href="/uzleteink-elerhetosege/">Üzleteink</a></li>
+                        <li><a href="/uzleteink-elerhetosege">Üzleteink</a></li>
             </ul>
         </div><!--/.nav-collapse -->
     </div><!--/.container-fluid -->
