--- a/docs/_includes/_scripts.html
+++ b/docs/_includes/_scripts.html
@@ -1,3 +1,5 @@
 <script src="/assets/jquery-2.1.3.js"></script>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.5/js/bootstrap.min.js" integrity="sha512-K1qjQ+NcF2TYO/eI3M6v8EiNYZfA95pQumfvcVrTHtwQVDG+aHRqLi/ETn2uB+1JqwYqVG3LIvdm9lj6imS/pQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
+<script src="/assets/map.js" ></script>
