--- a/docs/_includes/footer.html
+++ b/docs/_includes/footer.html
@@ -20,7 +20,7 @@
                             {% endfor %}
                         </div>
                         <p class="details">
-                            Tekintse meg a nyitvatartást, valamint üzletink elérhetőségét térképen is <a href="/uzleteink-elerhetosege/">itt</a>.
+                            Tekintse meg a nyitvatartást, valamint üzletink elérhetőségét térképen is <a href="/uzleteink-elerhetosege">itt</a>.
                         </p>
                     </section>
                 </div>
