--- a/docs/_includes/footer.html
+++ b/docs/_includes/footer.html
@@ -42,6 +42,9 @@
                               </svg>
                             <span>Facebook oldalunk</span></a>
                         </p>
+                        <p>
+                            Bejelentkezés szürkehályog műtére: <span class="phone"><strong>+36205020179</strong></span>
+                        </p>
                     </section>
                 </div>
 
