--- a/docs/_includes/footer.html
+++ b/docs/_includes/footer.html
@@ -43,7 +43,7 @@
                             <span>Facebook oldalunk</span></a>
                         </p>
                         <p>
-                            Bejelentkezés szürkehályog műtére: <span class="phone"><strong>+36205020179</strong></span>
+                            Bejelentkezés vizsgálatra / műtétre: <span class="phone"><strong>+36 20 502 0179</strong></span>
                         </p>
                     </section>
                 </div>
