--- a/docs/_includes/header.html
+++ b/docs/_includes/header.html
@@ -1,28 +1,32 @@
 <nav class="navbar navbar-default">
     <div class="container">
         <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
+                aria-expanded="false" aria-controls="navbar">
                 <span class="sr-only">Toggle navigation</span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            
 
-<a class="navbar-brand" href="/">
-    <img src="/assets/images/logo.png" class="logo" />
-    <span class="brandname">Aranyszem Optika</span>
-</a>
+
+            <a class="navbar-brand" href="/">
+                <img src="/assets/images/logo.png" class="logo" />
+                <span class="brandname">Aranyszem Optika</span>
+            </a>
 
         </div>
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav menu">
 
-                        <li><a href="/szolgaltatasok">Szolgáltatások</a></li>
-                        <li><a href="/szurkehalyog-mutet">Szürkehályog műtét</a></li>
-                        <li><a href="/arak">Árak</a></li>
-                        <li><a href="/uzleteink-elerhetosege">Üzleteink</a></li>
+                {% include _menuItem.html url="/szolgaltatasok" title="Szolgáltatások" %}
+                {% include _menuItem.html url="/szurkehalyog-mutet" title="Szürkehályog műtét" %}
+                {% include _menuItem.html url="/arak" title="Árak" %}
+                {% include _menuItem.html url="/uzleteink-elerhetosege" title="Üzleteink" %}
+
             </ul>
-        </div><!--/.nav-collapse -->
-    </div><!--/.container-fluid -->
+        </div>
+        <!--/.nav-collapse -->
+    </div>
+    <!--/.container-fluid -->
 </nav>
